--- a/src/integration/Cargo.toml
+++ b/src/integration/Cargo.toml
@@ -9,7 +9,7 @@ qos_core = { path = "../qos_core", features = ["mock"], default-features = false
 qos_nsm = { path = "../qos_nsm", features = ["mock"], default-features = false }
 qos_host = { path = "../qos_host", default-features = false }
 qos_client = { path = "../qos_client", default-features = false }
-qos_net = { path = "../qos_net", default-features = false }
+qos_net = { path = "../qos_net", features = ["proxy", "async_proxy"], default-features = false }
 qos_crypto = { path = "../qos_crypto" }
 qos_hex = { path = "../qos_hex" }
 qos_p256 = { path = "../qos_p256", features = ["mock"] }
@@ -19,6 +19,7 @@ tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"], default-
 borsh = { version = "1.0", features = ["std", "derive"] , default-features = false}
 nix = { version = "0.26", features = ["socket"], default-features = false }
 rustls = { version = "0.23.5" }
+tokio-rustls = { version = "0.26.2" }
 webpki-roots = { version = "0.26.1" }
 
 [dev-dependencies]
