--- a/src/init/Cargo.toml
+++ b/src/init/Cargo.toml
@@ -10,7 +10,11 @@ qos_aws = { path = "../qos_aws"}
 qos_system = { path = "../qos_system"}
 qos_core = { path = "../qos_core", features = ["vm"], default-features = false }
 qos_nsm = { path = "../qos_nsm", default-features = false }
+tokio = { version = "1.38.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time", "signal"], default-features = false, optional = true}
 
 [[bin]]
 name = "init"
 path = "init.rs"
+
+[features]
+async = ["qos_core/async", "tokio"]
