--- a/src/qos_core/Cargo.toml
+++ b/src/qos_core/Cargo.toml
@@ -21,7 +21,8 @@ aws-nitro-enclaves-nsm-api = { version = "0.4", default-features = false }
 serde_bytes = { version = "0.11", default-features = false }
 serde = { version = "1", features = ["derive"], default-features = false }
 
-tokio = { version = "1.38.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time"], default-features = false }
+futures = { version = "0.3.30" }
+tokio = { version = "1.38.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time", "signal"], default-features = false, optional = true}
 tokio-vsock = { version = "0.7.1", optional = true }
 
 [dev-dependencies]
@@ -32,7 +33,13 @@ rustls = { version = "0.23.5" }
 webpki-roots = { version = "0.26.1" }
 
 [features]
+async = ["tokio", "tokio-vsock"]
 # Support for VSOCK
-vm = ["tokio-vsock"]
+vm = []
 # Never use in production - support for mock NSM
 mock = ["qos_nsm/mock"]
+
+[[bin]]
+name = "async_qos_core"
+path = "src/bin/async_qos_core.rs"
+required-features = ["async"]
