--- a/src/qos_net/Cargo.toml
+++ b/src/qos_net/Cargo.toml
@@ -11,23 +11,31 @@ borsh = { version = "1.0", features = [
     "std",
     "derive",
 ], default-features = false }
+futures = { version = "0.3.30", optional = false }
 serde = { version = "1", features = ["derive"], default-features = false }
 hickory-resolver = { version = "0.24.1", features = [
     "tokio-runtime",
 ], default-features = false, optional = true }
 rand = { version = "0.8.5", default-features = false, optional = true }
+tokio = { version = "1.38.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time"], default-features = false, optional = true }
 
 [dev-dependencies]
 qos_test_primitives = { path = "../qos_test_primitives" }
 httparse = { version = "1.9.4", default-features = false }
 chunked_transfer = { version = "1.5.0", default-features = false }
+rustls = { version = "0.23.5" }
 serde_json = { version = "1.0.121", features = [
     "std",
 ], default-features = false }
-rustls = { version = "0.23.5" }
 webpki-roots = { version = "0.26.1" }
 
 [features]
-default = ["proxy"]                  # keep this as a default feature ensures we lint by default
+default = ["proxy"] # keep this as a default feature ensures we lint by default
+async_proxy = ["hickory-resolver", "rand", "tokio", "qos_core/async"]
 proxy = ["rand", "hickory-resolver"]
-vm = []
+vm = ["qos_core/vm"]
+
+[[bin]]
+name = "async_qos_net"
+path = "src/bin/async_qos_net.rs"
+required-features = ["async_proxy"]
