implement async qos_net::AsyncProxy
this includes:
 - AsyncStream [qos_core]
 - AsyncListener [qos_core]
 - AsyncRequestProcessor [qos_core]
 - AsyncProxyConnection [qos_net]
 - AsyncProxy [qos_net]
 - AsyncProxyStream [qos_net]

--- a/src/qos_core/Cargo.toml
+++ b/src/qos_core/Cargo.toml
@@ -32,6 +32,7 @@ rustls = { version = "0.23.5" }
 webpki-roots = { version = "0.26.1" }
 
 [features]
+default = ["vm"]
 # Support for VSOCK
 vm = ["tokio-vsock"]
 # Never use in production - support for mock NSM
