--- a/src/qos_net/Cargo.toml
+++ b/src/qos_net/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
-qos_core = { path = "../qos_core", default-features = false }
+qos_core = { path = "../qos_core", default-features = false, features = ["vm"] }
 
 borsh = { version = "1.0", features = [
     "std",
@@ -16,18 +16,20 @@ hickory-resolver = { version = "0.24.1", features = [
     "tokio-runtime",
 ], default-features = false, optional = true }
 rand = { version = "0.8.5", default-features = false, optional = true }
+tokio = { version = "1.38.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time"], default-features = false, optional = true }
 
 [dev-dependencies]
 qos_test_primitives = { path = "../qos_test_primitives" }
 httparse = { version = "1.9.4", default-features = false }
 chunked_transfer = { version = "1.5.0", default-features = false }
+rustls = { version = "0.23.5" }
 serde_json = { version = "1.0.121", features = [
     "std",
 ], default-features = false }
-rustls = { version = "0.23.5" }
 webpki-roots = { version = "0.26.1" }
 
 [features]
-default = ["proxy"]                  # keep this as a default feature ensures we lint by default
+default = ["async_proxy"] # keep this as a default feature ensures we lint by default
+async_proxy = ["hickory-resolver", "rand", "tokio"]
 proxy = ["rand", "hickory-resolver"]
 vm = []
