--- a/src/qos_enclave/Cargo.toml
+++ b/src/qos_enclave/Cargo.toml
@@ -8,7 +8,7 @@ publish = false
 
 [dependencies]
 nitro-cli = { git = "https://github.com/aws/aws-nitro-enclaves-cli", version = "1.4.0" }
-libc = "0.2.149"
+libc = "0.2.172" # NOTE: nitro-cli requires ^0.2.161
 
 [features]
 default = []
