--- a/src/integration/Cargo.toml
+++ b/src/integration/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
+aws-nitro-enclaves-cose = { version = "0.5", default-features = false, features = ["key_openssl_pkey"] }
 qos_core = { path = "../qos_core", features = ["mock"], default-features = false }
 qos_nsm = { path = "../qos_nsm", features = ["mock"], default-features = false }
 qos_host = { path = "../qos_host", default-features = false }
@@ -15,11 +16,15 @@ qos_hex = { path = "../qos_hex" }
 qos_p256 = { path = "../qos_p256", features = ["mock"] }
 qos_test_primitives = { path = "../qos_test_primitives" }
 
+openssl = { version = "0.10.72", default-features = false}
+serde_bytes = { version = "0.11.14", default-features = false }
 tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"], default-features = false }
 borsh = { version = "1.0", features = ["std", "derive"] , default-features = false}
 nix = { version = "0.26", features = ["socket"], default-features = false }
 rustls = { version = "0.23.5" }
 webpki-roots = { version = "0.26.1" }
+x509-cert = { version = "0.2.5", features = ["pem", "std", "builder"], default-features = false }
+p256 = { version = "0.13", features = ["ecdh", "ecdsa", "ecdsa-core", "std"], default-features = false }
 
 [dev-dependencies]
 qos_core = { path = "../qos_core", features = ["mock"], default-features = false }
