Switch back to random conn ID assignment, but use a u128 to make collisions irrelevant

--- a/src/qos_net/Cargo.toml
+++ b/src/qos_net/Cargo.toml
@@ -15,6 +15,7 @@ serde = { version = "1", features = ["derive"], default-features = false }
 hickory-resolver = { version = "0.24.1", features = [
     "tokio-runtime",
 ], default-features = false, optional = true }
+rand = { version = "0.8.5", default-features = false, optional = true }
 
 [dev-dependencies]
 qos_test_primitives = { path = "../qos_test_primitives" }
@@ -28,5 +29,5 @@ webpki-roots = { version = "0.26.1" }
 
 [features]
 default = ["proxy"]                  # keep this as a default feature ensures we lint by default
-proxy = ["hickory-resolver"]
+proxy = ["rand", "hickory-resolver"]
 vm = []
