--- a/src/qos_net/Cargo.toml
+++ b/src/qos_net/Cargo.toml
@@ -12,8 +12,9 @@ borsh = { version = "1.0", features = [
     "derive",
 ], default-features = false }
 serde = { version = "1", features = ["derive"], default-features = false }
-hickory-resolver = { version = "0.24.1", features = [
-    "tokio-runtime",
+
+hickory-resolver = { version = "0.25.1", features = [
+    "tokio",
 ], default-features = false, optional = true }
 rand = { version = "0.8.5", default-features = false, optional = true }
 
