Selectively update the rand crate in qos_net and adjust API usage

--- a/src/qos_net/Cargo.toml
+++ b/src/qos_net/Cargo.toml
@@ -15,7 +15,9 @@ serde = { version = "1", features = ["derive"], default-features = false }
 hickory-resolver = { version = "0.24.1", features = [
     "tokio-runtime",
 ], default-features = false, optional = true }
-rand = { version = "0.8.5", default-features = false, optional = true }
+rand = { version = "0.9.1", features = [
+    "thread_rng",
+], default-features = false, optional = true }
 
 [dev-dependencies]
 qos_test_primitives = { path = "../qos_test_primitives" }
