add async integration tests
implement async_qos_host for that purpose

--- a/src/Makefile
+++ b/src/Makefile
@@ -159,6 +159,10 @@ test:
 	@# The integration tests rely on binaries from other crates being built, so
 	@# we build all the workspace targets.
 	cargo build --all
+	@# We also need the async version of qos_core
+	cargo build --bin async_qos_core --features async,mock
+	@# We also need the async version of qos_host
+	cargo build --bin async_qos_host --features async
 	@# We also need the async version of qos_net
 	cargo build --bin async_qos_net --features async_proxy
 	@# Run tests
