--- a/src/qos_host/Cargo.toml
+++ b/src/qos_host/Cargo.toml
@@ -18,3 +18,8 @@ serde = { version = "1", features = ["derive"], default-features = false }
 [features]
 async = ["qos_core/async"]
 vm = ["qos_core/vm"]
+
+[[bin]]
+name = "async_qos_host"
+path = "src/bin/async_qos_host.rs"
+required-features = ["async"]
