--- a/src/qos_net/Cargo.toml
+++ b/src/qos_net/Cargo.toml
@@ -13,7 +13,8 @@ borsh = { version = "1.0", features = [
 ], default-features = false }
 serde = { version = "1", features = ["derive"], default-features = false }
 hickory-resolver = { version = "0.25.2", features = [
-    "tokio",
+    "tokio",       # for async
+    "dnssec-ring", # for DNSSEC
 ], default-features = false, optional = true }
 rand = { version = "0.9.1", features = [
     "thread_rng",
