--- a/src/qos_core/Cargo.toml
+++ b/src/qos_core/Cargo.toml
@@ -21,8 +21,8 @@ serde_bytes = { workspace = true }
 serde = { workspace = true }
 
 futures = { version = "0.3.30" }
-tokio = { version = "1.38.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time", "signal"], default-features = false, optional = true}
-tokio-vsock = { version = "0.7.1", optional = true }
+tokio = { version = "1.38.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time", "signal"], default-features = false }
+tokio-vsock = { version = "0.7.1" }
 
 [dev-dependencies]
 qos_test_primitives = { workspace = true }
@@ -32,13 +32,11 @@ rustls = { workspace = true }
 webpki-roots = { workspace = true }
 
 [features]
-async = ["tokio", "tokio-vsock"]
 # Support for VSOCK
 vm = []
 # Never use in production - support for mock NSM
 mock = ["qos_nsm/mock"]
 
 [[bin]]
-name = "async_qos_core"
-path = "src/bin/async_qos_core.rs"
-required-features = ["async"]
+name = "qos_core"
+path = "src/main.rs"
