--- a/src/qos_crypto/Cargo.toml
+++ b/src/qos_crypto/Cargo.toml
@@ -4,14 +4,14 @@ version = "0.1.0"
 edition = "2021"
 publish = false
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 sha2 = { version = "0.10", default-features = false }
-rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
+thiserror = { version = "2.0.12",  features = ["std"], default-features = false }
 vsss-rs = { version = "5.1", default-features = false, features = ["std", "zeroize"] }
+# dependent on rand_core version used in vsss-rs
+rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
+# dependent on rand_core version used in vsss-rs
 rand_core = { version = "0.6.4", default-features = false }
-thiserror = "1.0.63"
 
 [dev-dependencies]
 qos_hex = { path = "../qos_hex" }
