--- a/src/qos_nsm/Cargo.toml
+++ b/src/qos_nsm/Cargo.toml
@@ -6,18 +6,19 @@ publish = false
 
 [dependencies]
 qos_hex = { path = "../qos_hex" }
-borsh = { version = "1.0", features = ["std", "derive"] , default-features = false}
+borsh = { version = "1.5", features = ["std", "derive"] , default-features = false}
 aws-nitro-enclaves-nsm-api = { version = "0.4", features = ["nix"], default-features = false }
 aws-nitro-enclaves-cose = { version = "0.5", default-features = false }
 sha2 = { version = "0.10", default-features = false }
 webpki = { version =  "0.22.4", default-features = false }
 serde_bytes = { version = "0.11", default-features = false }
-p384 = { version = "0.12", features = ["sha384", "ecdsa", "ecdsa-core", "std"], default-features = false }
-x509-cert = { version = "=0.1.0", features = ["pem"], default-features = false }
+# as of 0.12.0, the "ecdsa" feature enables "sha384", some "ecdsa-core", and others
+p384 = { version = "0.13", features = ["ecdsa", "std"], default-features = false }
+x509-cert = { version = "0.2.5", features = ["pem"], default-features = false }
 
 [dev-dependencies]
-hex-literal = "0.4"
-rand = "0.8"
+# 1.0.0 requires Rust edition 2024
+hex-literal = "0.4.0"
 
 [features]
 # Never use in production - support for mock NSM
