--- a/src/qos_p256/Cargo.toml
+++ b/src/qos_p256/Cargo.toml
@@ -8,14 +8,16 @@ publish = false
 qos_hex = { path = "../qos_hex" }
 
 borsh = { version = "1.0", features = ["std", "derive"] , default-features = false}
+# version related to p256 crate
 rand_core = { version = "0.6.4", default-features = false }
 
 sha2 = { version = "0.10", default-features = false }
-p256 = { version = "0.12.0", features = ["ecdh", "ecdsa", "ecdsa-core", "std"], default-features = false }
+# as of 0.12.0, the "ecdsa" feature enables "sha384", some "ecdsa-core", and others
+p256 = { version = "0.12.0", features = ["ecdh", "ecdsa", "std"], default-features = false }
 aes-gcm = { version = "0.10.3", features = ["aes", "alloc"], default-features = false }
 hmac = { version = "0.12", default-features = false }
 hkdf = { version = "0.12", default-features = false }
-zeroize = { version = "1.6", features = ["derive"], default-features = false }
+zeroize = { version = "1.8", features = ["derive"], default-features = false }
 
 [dev-dependencies]
 qos_test_primitives = { path = "../qos_test_primitives" }
