qos_net: remove unused connection_id
from Proxy, ProxyConnection and ProxyMsg

--- a/src/qos_net/Cargo.toml
+++ b/src/qos_net/Cargo.toml
@@ -29,5 +29,5 @@ webpki-roots = { workspace = true }
 
 [features]
 default = ["proxy"] # keep this as a default feature ensures we lint by default
-proxy = ["hickory-resolver", "rand", "tokio", "tokio-rustls"]
+proxy = ["hickory-resolver", "tokio", "tokio-rustls"]
 vm = ["qos_core/vm"]
