--- a/src/integration/Cargo.toml
+++ b/src/integration/Cargo.toml
@@ -14,6 +14,7 @@ qos_hex = { workspace = true }
 qos_p256 = { workspace = true, features = ["mock"] }
 qos_test_primitives = { workspace = true }
 
+futures = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 borsh = { workspace = true }
 nix = { workspace = true }
