--- a/src/qos_client/Cargo.toml
+++ b/src/qos_client/Cargo.toml
@@ -25,8 +25,8 @@ zeroize = { workspace = true }
 rpassword = { workspace = true }
 serde_json = { workspace = true }
 
-x509 = { workspace = true, optional = true }
-# As of 7/2025, upgrading this to 0.8.0 is blocked due to dependency conflicts
+der = { workspace = true, optional = true }
+x509-cert = { workspace = true, optional = true }
 yubikey = { workspace = true, optional = true }
 
 [dev-dependencies]
@@ -38,5 +38,4 @@ qos_p256 = { workspace = true, features = ["mock"] }
 
 [features]
 default = ["smartcard"]
-smartcard = ["x509", "yubikey"]
-
+smartcard = ["der", "x509-cert", "yubikey"]
