--- a/src/qos_test_primitives/Cargo.toml
+++ b/src/qos_test_primitives/Cargo.toml
@@ -6,3 +6,4 @@ publish = false
 
 [dependencies]
 rand = { workspace = true }
+nix = { workspace = true, default-features = false, features = ["signal"] }
