--- a/src/integration/Cargo.toml
+++ b/src/integration/Cargo.toml
@@ -14,6 +14,7 @@ qos_crypto = { path = "../qos_crypto" }
 qos_hex = { path = "../qos_hex" }
 qos_p256 = { path = "../qos_p256", features = ["mock"] }
 qos_test_primitives = { path = "../qos_test_primitives" }
+qos_host_primitives = { path = "../qos_host_primitives" }
 
 tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread"], default-features = false }
 borsh = { version = "1.0", features = ["std", "derive"] , default-features = false}
