adding attestation service

--- a/src/qos_reshard/host/Cargo.toml
+++ b/src/qos_reshard/host/Cargo.toml
@@ -8,6 +8,7 @@ publish = false
 qos_core = { path = "../../qos_core" }
 qos_host_primitives = { path = "../../qos_host_primitives" }
 health_check = { path = "../../health_check" }
+attestation = { path = "../../attestation" }
 generated = { path = "../../generated", features = ["tonic_types"] }
 metrics = { path = "../../metrics" }
 
