--- a/src/qos_reshard/app/Cargo.toml
+++ b/src/qos_reshard/app/Cargo.toml
@@ -11,9 +11,11 @@ vsock = ["qos_core/vm"]
 
 [dependencies]
 qos_core = { path = "../../qos_core" }
+qos_crypto = { path = "../../qos_crypto" }
 qos_p256 = { path = "../../qos_p256" }
 qos_nsm = { path = "../../qos_nsm" }
 qos_net = { path = "../../qos_net" }
+qos_hex = { path = "../../qos_hex"}
 generated = { path = "../../generated" }
 http = { version = "0.2", default-features = false }
 httparse = { version = "1.6", default-features = false }
@@ -26,6 +28,11 @@ rustls = { version = "0.23.5", features = [
 ], default-features = false }
 webpki-roots = { version = "0.26.1", default-features = false }
 chunked_transfer = { version = "1.5.0", default-features = false }
+borsh = { version = "1.0", features = [
+  "std",
+  "derive",
+], default-features = false }
+serde = { version = "1", features = ["derive"], default-features = false }
 
 [dev-dependencies]
 reshard_app = { path = ".", features = ["mock"] }
