--- a/src/qos_reshard/app/Cargo.toml
+++ b/src/qos_reshard/app/Cargo.toml
@@ -33,6 +33,6 @@ borsh = { version = "1.0", features = [
   "derive",
 ], default-features = false }
 serde = { version = "1", features = ["derive"], default-features = false }
-
+serde_json = { version = "1", default-features = false }
 [dev-dependencies]
 reshard_app = { path = ".", features = ["mock"] }
