--- a/src/integration/Cargo.toml
+++ b/src/integration/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
+generated = { path = "../generated" }
 qos_core = { path = "../qos_core", features = ["mock"], default-features = false }
 qos_nsm = { path = "../qos_nsm", features = ["mock"], default-features = false }
 qos_host = { path = "../qos_host", default-features = false }
@@ -21,6 +22,8 @@ borsh = { version = "1.0", features = ["std", "derive"] , default-features = fal
 nix = { version = "0.26", features = ["socket"], default-features = false }
 rustls = { version = "0.23.5" }
 webpki-roots = { version = "1.0.2" }
+tonic = "0.9"
+rand = "0.9"
 
 [dev-dependencies]
 rand = "0.9"
