--- a/src/integration/Cargo.toml
+++ b/src/integration/Cargo.toml
@@ -24,7 +24,13 @@ rustls = { version = "0.23.5" }
 webpki-roots = { version = "1.0.2" }
 tonic = "0.9"
 rand = "0.9"
+futures = "0.3"
+serde_json = { version = "1" }
 
 [dev-dependencies]
 rand = "0.9"
 ureq = { version = "2.9", features = ["json"], default-features = false }
+tokio = { version = "1.25.0", features = [
+  "macros",
+  "rt-multi-thread",
+], default-features = false }
