Work on clippy fixes
Except for the Cargo.toml corrections in the fuzz crates, there should be no functional change.

--- a/src/qos_crypto/fuzz/Cargo.toml
+++ b/src/qos_crypto/fuzz/Cargo.toml
@@ -20,7 +20,7 @@ members = ["."]
 
 [profile.release]
 # enable arithmetic checks at runtime
-overflow-check = 1
+overflow-checks = true
 
 [[bin]]
 name = "1_shamir_generate_reconstruct"
