--- a/src/integration/Cargo.toml
+++ b/src/integration/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
-reshard_app = { path = "../qos_reshard/app" }
+reshard_app = { path = "../reshard/app" }
 generated = { path = "../generated" , default-features = false}
 qos_core = { path = "../qos_core", features = ["mock"], default-features = false }
 qos_nsm = { path = "../qos_nsm", features = ["mock"], default-features = false }
