--- a/.github/workflows/stagex.yml
+++ b/.github/workflows/stagex.yml
@@ -25,3 +25,40 @@ jobs:
         shell: 'script -q -e -c "bash {0}"'
         run: |
             make -j$(nproc)
+  images:
+    name: Build and push images
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    permissions:
+      id-token: write
+      contents: read
+      packages: write
+    env:
+      tags: >-
+        ${{ github.ref == format('refs/heads/{0}', 'main') && 'latest' || '' }}
+        ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || '' }}
+        ${{ github.event_name == 'push' && github.ref_name || '' }}
+        strategy:
+    strategy:
+      matrix:
+        target:
+          - name: reshard_app
+          - name: reshard_host
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Docker setup
+        uses: ./.github/actions/docker-setup
+    
+      - name: Build ${{ matrix.target.name }}
+        shell: bash
+        run: |
+          make -j$(nproc) out/${{ matrix.target.name }}/index.json
+      
+      - name: Upload to GHCR
+        run: |
+          for tag in ${tags}; do
+              docker tag "tkhq-qos/${{ matrix.app.name }}:latest" "ghcr.io/tkhq/${{ matrix.app.name }}:${tag}"
+          done
+          docker image push --all-tags "ghcr.io/tkhq/${{ matrix.app.name }}"
