--- a/.github/workflows/stagex.yml
+++ b/.github/workflows/stagex.yml
@@ -27,7 +27,8 @@ jobs:
             make -j$(nproc)
   images:
     name: Build and push images
-    runs-on: ubuntu-latest
+    runs-on:
+      group: ubuntu-runners
     timeout-minutes: 60
     permissions:
       id-token: write
@@ -50,6 +51,8 @@ jobs:
 
       - name: Docker setup
         uses: ./.github/actions/docker-setup
+        with:
+          ghcr: ${{ secrets.GITHUB_TOKEN }}
     
       - name: Build ${{ matrix.target.name }}
         shell: bash
