.github/actions/docker-setup/action.yml: try changing docker-setup

--- a/.github/actions/docker-setup/action.yml
+++ b/.github/actions/docker-setup/action.yml
@@ -1,5 +1,9 @@
 name: "Set up Docker"
-description: "Ensure Docker is installed and configured correctly"
+description: "Ensure Docker is configured correctly"
+inputs:
+  ghcr:
+    description: "Github API key"
+    required: false
 runs:
   using: "composite"
   steps:
@@ -7,19 +11,8 @@ runs:
       shell: 'script -q -e -c "bash {0}"'
       run: |
         [[ $EUID -ne 0 ]] && exec sudo /bin/sh "$0" "$@"
-        for pkg in docker.io docker-doc docker-compose docker-compose-v2 podman-docker containerd runc; \
-          do apt-get remove $pkg; \
-        done
-        apt-get update
-        apt-get install ca-certificates curl
-        install -m 0755 -d /etc/apt/keyrings
-        curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
-        chmod a+r /etc/apt/keyrings/docker.asc
-        echo \
-          "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \
-          $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
-          tee /etc/apt/sources.list.d/docker.list > /dev/null
-        apt-get update
+        docker version
+
         cat << EOF >/etc/docker/daemon.json
         {
           "features": {
@@ -28,6 +21,12 @@ runs:
           "registry-mirrors": ["https://ghcr.io/tkhq"]
         }
         EOF
-        apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+
         systemctl restart docker
         docker buildx create --driver docker-container --bootstrap --name build --use
+
+    - name: Login to GHCR
+      if: ${{ inputs.ghcr != '' }}
+      shell: 'script -q -e -c "bash {0}"'
+      run: |
+        echo "${{ inputs.ghcr }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
