--- a/src/qos_hex/Cargo.toml
+++ b/src/qos_hex/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
-serde = { version = "1", optional = true, default-features = false }
+serde = { workspace = true, optional = true }
 
 [features]
 serde = ["dep:serde"]
