--- a/src/qos_host/Cargo.toml
+++ b/src/qos_host/Cargo.toml
@@ -5,15 +5,15 @@ edition = "2021"
 publish = false
 
 [dependencies]
-qos_core = { path = "../qos_core", default-features = false }
-qos_hex = { path = "../qos_hex", features = ["serde"], default-features = false }
+qos_core = { workspace = true, default-features = false }
+qos_hex = { workspace = true, features = ["serde"], default-features = false }
 
 # Third party
-axum = { version = "0.6.20", features = ["http1", "tokio", "json"], default-features = false }
-tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread"], default-features = false }
-borsh = { version = "1.0", features = ["std", "derive"] , default-features = false}
-serde_json = { version = "1" }
-serde = { version = "1", features = ["derive"], default-features = false }
+axum = { workspace = true }
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
+borsh = { workspace = true }
+serde_json = { workspace = true }
+serde = { workspace = true }
 
 [features]
 vm = ["qos_core/vm"]
