--- a/src/qos_p256/Cargo.toml
+++ b/src/qos_p256/Cargo.toml
@@ -5,22 +5,20 @@ edition = "2021"
 publish = false
 
 [dependencies]
-qos_hex = { path = "../qos_hex" }
+qos_hex = { workspace = true }
 
-borsh = { version = "1.0", features = ["std", "derive"] , default-features = false}
-# version related to p256 crate
-rand_core = { version = "0.6.4", default-features = false }
+borsh = { workspace = true }
 
-sha2 = { version = "0.10", default-features = false }
+sha2 = { workspace = true }
 # as of 0.12.0, the "ecdsa" feature enables "sha384", some "ecdsa-core", and others
-p256 = { version = "0.12.0", features = ["ecdh", "ecdsa", "std"], default-features = false }
-aes-gcm = { version = "0.10.3", features = ["aes", "alloc"], default-features = false }
-hmac = { version = "0.12", default-features = false }
-hkdf = { version = "0.12", default-features = false }
-zeroize = { version = "1.8", features = ["derive"], default-features = false }
+p256 = { workspace = true, features = ["ecdh", "ecdsa", "std"] }
+aes-gcm = { workspace = true }
+hmac = { workspace = true }
+hkdf = { workspace = true }
+zeroize = { workspace = true, features = ["derive"] }
 
 [dev-dependencies]
-qos_test_primitives = { path = "../qos_test_primitives" }
+qos_test_primitives = { workspace = true }
 
 [features]
 # Things to make writing tests easier
