--- a/src/qos_aws/Cargo.toml
+++ b/src/qos_aws/Cargo.toml
@@ -2,6 +2,7 @@
 name = "qos_aws"
 version = "0.1.0"
 edition = "2021"
+rust-version = "1.88"
 publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
