--- a/.github/workflows/stagex.yml
+++ b/.github/workflows/stagex.yml
@@ -12,10 +12,8 @@ on:
 jobs:
   build:
     name: build artifacts
-    # We use a special group that is configured to use github largest runner instance
-    # This is charged by the minute, so if you want to reduce cost change back to `runs-on: ubuntu-latest`
     runs-on:
-      group: ubuntu-runners
+      group: ubicloud-standard-4
     steps:
       - name: Checkout sources
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
