--- a/src/images/qos_client/Containerfile
+++ b/src/images/qos_client/Containerfile
@@ -1,7 +1,7 @@
-FROM common as base
+FROM common AS base
 ADD . /src
 
-FROM base as build
+FROM base AS build
 ENV PCSC_LIB_NAME=static=pcsclite
 RUN <<-EOF
 	set -eux
@@ -10,11 +10,11 @@ RUN <<-EOF
 	file /qos_client | grep "static-pie"
 EOF
 
-FROM base as install
+FROM base AS install
 WORKDIR /rootfs
 COPY --from=build /qos_client .
 RUN find . -exec touch -hcd "@0" "{}" +
 
-FROM scratch as package
+FROM scratch AS package
 COPY --from=install /rootfs .
 ENTRYPOINT ["/qos_client"]
