src/qos_core: add ability to convert string to ShareSet struct

--- a/src/qos_core/Cargo.toml
+++ b/src/qos_core/Cargo.toml
@@ -19,6 +19,7 @@ aws-nitro-enclaves-nsm-api = { workspace = true }
 
 serde_bytes = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
 
 [dev-dependencies]
 qos_test_primitives = { workspace = true }
